--- a/index.html
+++ b/index.html
@@ -33,25 +33,27 @@
         <section id="visual_area" class="inner">
             <div class="title_area">
                 <p class="title">나만의 시간을 즐기는 완벽한 여행</p>
-                <p class="s_text">혼자 떠나는 자유로운 여행은 새로운 세상을 발견하는 첫걸음입니다. 나만의 일정으로 원하는 곳을 탐험하며 진정한 자유를 만끽하세요. 모든 순간이 모험이 되는 나만의 특별한 여행을 즐겨보세요</p>
+                <p class="s_text">혼자 떠나는 자유로운 여행은 새로운 세상을 발견하는 첫걸음입니다. <br>
+                    나만의 일정으로 원하는 곳을 탐험하며 진정한 자유를 만끽하세요. <br>
+                    모든 순간이 모험이 되는 나만의 특별한 여행을 즐겨보세요</p>
             </div>
         </section>
 
         <section id="cont_wrap" class="inner">
             <article class="cont_top">
                 <div class="intro">
-                    <h2>About SoloTrips</h2>
+                    <h2>About Solo Trips</h2>
                     <p class="text">
-                        <strong>SoloTrips</strong>는 혼자 떠나는 여행자들을 위한 종합 가이드로, 당신의 자유 여행에 필요한 일정을 계획하고 떠나기 위해 필요한 모든 정보를 제공합니다. 
+                        <strong>Solo Trips</strong>는 혼자 떠나는 여행자들을 위한 종합 가이드로, 당신의 자유 여행에 필요한 일정을 계획하고 떠나기 위해 필요한 모든 정보를 제공합니다. 
                     </p>
                     <p class="text">
                         여행 계획하기부터 항공 및 교통, 숙박 정보, 현지 정보, 그리고 다양한 여행 팁과 노하우까지, 각 단계별로 체계적인 도움을 받을 수 있습니다.
                     </p> 
                     <p class="text">
-                        <strong>SoloTrips</strong> 혼자 여행하는 이들에게 자유롭고 유연한 일정 짜기, 다양한 교통 수단 정보, 숙소 선택의 폭을 넓혀주는 추천 리스트, 그리고 지역마다 꼭 가봐야 할 명소와 숨겨진 맛집 소개 등 다양한 콘텐츠를 제공합니다. 또한, 혼자 여행하는 이들이 놓치기 쉬운 안전 및 건강 정보, 그리고 현지에서 유용한 팁들을 통해 더욱 안전하고 즐거운 여행을 할 수 있는 정보를 모았습니다.
+                        <strong>Solo Trips</strong> 혼자 여행하는 이들에게 자유롭고 유연한 일정 짜기, 다양한 교통 수단 정보, 숙소 선택의 폭을 넓혀주는 추천 리스트, 그리고 지역마다 꼭 가봐야 할 명소와 숨겨진 맛집 소개 등 다양한 콘텐츠를 제공합니다. 또한, 혼자 여행하는 이들이 놓치기 쉬운 안전 및 건강 정보, 그리고 현지에서 유용한 팁들을 통해 더욱 안전하고 즐거운 여행을 할 수 있는 정보를 모았습니다.
                     </p>
                     <p class="text">
-                        <strong>SoloTrips</strong>와 함께라면 당신의 모든 순간이 특별하고 소중한 추억으로 남을 것입니다. 지금 바로 자유롭고 자신감 넘치는 여행을 시작하세요!</p>
+                        <strong>Solo Trips</strong>와 함께라면 당신의 모든 순간이 특별하고 소중한 추억으로 남을 것입니다. 지금 바로 자유롭고 자신감 넘치는 여행을 시작하세요!</p>
                     </p>
                 </div>
                 <!-- //intro -->
@@ -77,7 +79,7 @@
                 </aside>
             </article>
             <article class="cont_bottom">
-                <h2>이번주 할인가: 놓치지 말아야 할 특별 할인 여행지!</h2>
+                <h2><span>이번주 할인가: 놓치지 말아야 할</span> 특별 할인 여행지!</h2>
                 <div class="event_area">
                     <div class="event_text">
                         <p class="title">시드니, 호주 - 투어 프로그램 20% 할인</p>
